--- a/src/components/navbar/styles/navbar.css
+++ b/src/components/navbar/styles/navbar.css
@@ -4,8 +4,8 @@
   flex-direction: row;
   width: 100%;
   font-size: 18px;
-  padding: 10px 0px 10px 0px;
-  background-color: rgb(36, 33, 33);
+  /* padding-bottom:10px; */
+  background-color: rgb(10, 2, 0);
   position: sticky;
   top: 0;
   z-index: 10000;
